--- a/style.css
+++ b/style.css
@@ -1,1 +1,55 @@
-
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #00838f;
+}
+.allbox {
+  width: 80%;
+  height: 500px;
+  margin: auto;
+  margin-top: 60px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  color: #00acc1;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode";
+}
+img {
+  width: 100%;
+  height: 200px;
+}
+.allbox:hover {
+  background-color: #00acc1;
+  color: #211212;
+}
+.box {
+  margin-top: 2.2%;
+  width: 28%;
+  height: 450px;
+  border-left: solid #e0f7fa 1px;
+  border-right: solid #e0f7fa 1px;
+}
+h4 {
+  color: #211212;
+}
+h5,
+h3 {
+  width: 80%;
+  border-top: solid #bbdefb 1px;
+  margin: auto;
+  line-height: 30px;
+}
+button {
+  margin-top: 30px;
+  font-size: 18px;
+  background-color: #00acc1;
+  border: solid #ffffff 2px;
+  color: #ffffff;
+}
+button:hover {
+  background-color: #ffffff;
+  color: #00acc1;
+}
