--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #00838f;
+  background-color: #7b1fa2;
 }
 .allbox {
   width: 80%;
@@ -13,27 +13,31 @@ body {
   display: flex;
   justify-content: space-around;
   text-align: center;
-  color: #00acc1;
+  color: #4a148c;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode";
+  flex-wrap: wrap;
 }
 img {
   width: 100%;
   height: 200px;
 }
 .allbox:hover {
-  background-color: #00acc1;
-  color: #211212;
+  transition: 2s;
+  background-color: #4a148c;
+  color: #ffffff;
+  border: solid #ffffff 2px;
 }
 .box {
   margin-top: 2.2%;
-  width: 28%;
+  width: 30%;
   height: 450px;
   border-left: solid #e0f7fa 1px;
   border-right: solid #e0f7fa 1px;
+  flex-wrap: wrap;
 }
 h4 {
-  color: #211212;
+  color: #00e676;
 }
 h5,
 h3 {
@@ -43,13 +47,16 @@ h3 {
   line-height: 30px;
 }
 button {
-  margin-top: 30px;
-  font-size: 18px;
-  background-color: #00acc1;
+  margin-top: 3%;
+  font-size: 100%;
+  background-color: #00e676;
   border: solid #ffffff 2px;
   color: #ffffff;
+  border-radius: 10px;
 }
 button:hover {
+  transition: 1s;
   background-color: #ffffff;
-  color: #00acc1;
+  color: #00e676;
+  transform: scale(1.2);
 }
